syntax = "proto3";
import "google/protobuf/empty.proto";
import "internal/proto/common.proto";
package pb;
option go_package = "./;pb";

message Airport {
    string id = 1;
    string name = 2;
    string address = 3;
}

message Flight {
    string id = 1;
    string name = 2;
    Airport origin = 3;
    Airport destination = 4;
    string departure_time = 5;
    string arrival_time = 6;
    string created_at = 7;
}

message Seat {
    string id = 1;
    string seat_number = 2;
    Flight flight = 3;
}

message Airports {
    repeated Airport airports = 1;
}

service FlightService {
    rpc PostAirport (Airport) returns (Airport) {}
    rpc GetAirport (UUID) returns (Airport) {}
    rpc GetAirports (google.protobuf.Empty) returns (Airports) {}
}
